settings/.spyder/monitor.log
======================================
Logging time: Tue May 24 14:05:22 2016
======================================

Context
-------

__iscallable__(''stage')

Traceback
---------

Traceback (most recent call last):
  File "C:\Users\atm19\Documents\GitHub\Spyder\python-2.7.10.amd64\lib\site-packages\spyderlib\widgets\externalshell\monitor.py", line 553, in run
    result = eval(command, glbs, lcls)
  File "<string>", line 1
    __iscallable__(''stage')
                         ^
SyntaxError: invalid syntax


